<resources>
    <string name="accessibility_description">Enable this service to receive and show app notifications in Omni Swipe. This will only read the notification and show the information needed. If you hear any electronic voice when operating your phone, please turn off TalkBack in Settings > Accessibility.</string>
    <string name="action_float_window_permission">Enable</string>
    <string name="activity_title_feedback">Feedback</string>
    <string name="app_name">Omni Swipe</string>
    <string name="app_promotion_download">Get beautiful themes Now!</string>
    <string name="app_promotion_theme">Launcher Themes</string>
    <string name="communicate_phone">PHONE</string>
    <string name="config_default_notification_apps">com.sina.weibo,com.twitter.android,com.facebook.katana,com.whatsapp,com.tencent.mm,jp.naver.line.android,com.google.android.apps.plus,com.linkedin.android,com.instagram.android,com.pinterest,kik.android,com.tencent.mobileqq,com.alibaba.android.babylon,com.immomo.momo,com.kakao.talk,com.skype.rover,com.skype.raider,com.todooli.bridgecall,kr.co.tictocplus,org.telegram.messenger,com.viber.voip,com.hellochat.android,com.facebook.orca,com.talkatone.android,com.textmeinc.textme,com.outlook.Z7,com.yahoo.mobile.client.android.mail,com.yahoo.mobile.client.android.imvideo,com.groupme.android,com.textra,com.truecaller,com.google.android.voicesearch,com.google.android.apps.messaging,com.rounds.android,com.google.android.talk,com.glidetalk.glideapp,com.alibaba.mobileim,com.quoord.tapatalkpro.activity,com.snapchat.android,com.minus.android,com.tinder,ly.secret.android,com.sgiggle.production,flipboard.app,com.path,co.vine.android,com.skout.android,com.ketchapp.circle,com.tenthbit.juliet,com.eico.weico,com.tumblr,com.google.android.gm,com.tencent.qqlite,com.qzone,com.renren.mobile.android,com.xiaomi.channel,im.yixin,com.bbm,com.vkontakte.android</string>
    <string name="config_exclusively_launch" />
    <string name="config_facebook_app_id">774443062592078</string>
    <string name="config_package_name">com.lazyswipe.zev</string>
    <string name="contact_add_no_data_toast">Oops, you have no contacts to add for now.</string>
    <string name="contact_add_title">Select Contacts</string>
    <string name="description_enable_notification_service">Enable Omni Swipe to receive notifications from social/chat applications and never again miss important messages from your friends!</string>
    <string name="done">Done</string>
    <string name="dont_disturb_black_list_tip">Do Not Disturb: Omni Swipe will disabled in %s.</string>
    <string name="dont_disturb_black_list_toast_done">Disable is canceled</string>
    <string name="dont_disturb_black_list_toast_skip">You can choose again in Settings > Enable Omni Swipe for</string>
    <string name="dont_disturb_spurious_trigger_tip">Do you need to disable me in %s to prevent disturbances?</string>
    <string name="download">Download</string>
    <string name="download_again">Download Again</string>
    <string name="download_checking">Checking…</string>
    <string name="download_checking_connection_failed">Network unavailable, please try again later.</string>
    <string name="download_checking_connection_server_error">Server error, please wait.</string>
    <string name="download_checking_error">Update checking failed, please try again.</string>
    <string name="download_confirm_noDownload">Not Now</string>
    <string name="download_confirm_seeyoutommorrow">Remind Me Later</string>
    <string name="download_confirm_suffix">Update?</string>
    <string name="download_download_finish">Download finished.</string>
    <string name="download_download_start">Start downloading…</string>
    <string name="download_error">Download Failed</string>
    <string name="download_error_connection">Connection Failed</string>
    <string name="download_error_noconnection">You have no data connection, try again later.</string>
    <string name="download_error_not_writeable">Unable to update, SD card is not available.</string>
    <string name="download_error_savefile">Unable to save, please check your SD card.</string>
    <string name="download_error_validatefile">Verification failed, please download again.</string>
    <string name="download_isDownloading">Downloading…</string>
    <string name="download_retry">Downloaded file and target file do not match. Try again?</string>
    <string name="download_title_suffix">" has been updated!"</string>
    <string name="edit_contact_title">Choose contact method</string>
    <string name="feedback_add_screenshot">Add screenshots</string>
    <string name="feedback_content_hint">Your feedback will help us make improvements!</string>
    <string name="feedback_content_missing">Please input your feedback or suggestions</string>
    <string name="feedback_email_contact">You can also email us at %1$s</string>
    <string name="feedback_email_hint">Your social account (e.g., Facebook)</string>
    <string name="feedback_email_missing">Please input your social account (e.g., Facebook) so we can get back to you.</string>
    <string name="feedback_send">Submit</string>
    <string name="feedback_sending">Submitting your feedback, please wait…</string>
    <string name="feedback_thanks">Thank you for your feedback!</string>
    <string name="global_loading">Loading</string>
    <string name="global_share_method">Share with</string>
    <string name="guide_message">Swipe from either lower corner of the screen for quick access to your apps and settings!</string>
    <string name="guide_title">Welcome to Omni Swipe!</string>
    <string name="msg_activate_lockscreen">This function requires Lock Screen to be activated</string>
    <string name="msg_app_unavailable">This app is currently unavailable since the media on which the app exists is unavailable</string>
    <string name="msg_dead_notification_listener_service">The Omni Swipe notification service might have been dead for a while. Please disable and re-enable Omni Swipe to restart the service.</string>
    <string name="msg_enable_accessibility_action">"If you're having difficulty tapping objects on the corner/sides of your screen (where Omni Swipe triggers), try enabling Tap Assist."</string>
    <string name="msg_enable_accessibility_service">Please turn Omni Swipe on to enable this feature</string>
    <string name="msg_enable_ali_float_window">"Please allow Omni Swipe to show floating window in \"Advanced\" -> \"Permissions\" -> \"Floating Window\", 
 and then restart Omni Swipe."</string>
    <string name="msg_enable_color_os_float_window">Please open \"Floating window management\", find Omni Swipe and allow it to show floating window, and then restart Omni Swipe.</string>
    <string name="msg_enable_huawei_float_window">"Please allow Omni Swipe to show dropzone in \"Dropzone manager\", and then restart Omni Swipe.
(This option can be enabled in some Emui 2.3 devices. If you can't find it, please update your Emui version.)"</string>
    <string name="msg_enable_notification_service">Please find \"Omni Swipe\" and enable it.</string>
    <string name="msg_enable_root">With root permission, you can do more with less. For instance, you can toggle Airplane mode with just one tap…</string>
    <string name="msg_enable_usage_access">"Before starting your journey…

Enable Omni Swipe to access app usage data."</string>
    <string name="msg_enable_usage_access_samsung_addition">"

You may find Omni Swipe in \"Access application usage data\" at the bottom of Security settings."</string>
    <string name="msg_enable_xiaomi_float_window">Please switch on \"Enable floating windows\" and then restart Omni Swipe.</string>
    <string name="msg_install_lockscreen">This function requires Lock Screen to be installed/activated, which is available in Google Play. Go and get it?</string>
    <string name="msg_miui_setup">Please switch both \"Trust this app\" and \"Auto-start\" on</string>
    <string name="msg_no_blocked_recents">Tap and hold app icons in Activity menu to blacklist them.</string>
    <string name="msg_no_data">"Oops, we current don't have any data. Please come back some time later."</string>
    <string name="msg_no_setting_available">No setting for this icon</string>
    <string name="msg_no_toucher_selected">Please choose at least 1 area</string>
    <string name="msg_open_flashlight_too_frequently">Please do not frequently turn on and off the flashlight, as it might cause hardware damage</string>
    <string name="msg_oppo_keep_background_tasks">If \"Data saving\" is enabled, please tap \"Add program\", find \"Omni Swipe\" and set it as a trusted app.</string>
    <string name="msg_rate_features">Do you like this function? Please give us a 5-star rating! :)</string>
    <string name="msg_rate_settings">Your support drives our continued improvement, please give us 5 star!</string>
    <string name="msg_rate_theme">If you like the new theme, please give us a 5-star rating!</string>
    <string name="msg_sim_card_absent">Cannot turn data on as SIM is absent</string>
    <string name="msg_switching_off">Turning %1$s off, please wait…</string>
    <string name="msg_switching_on">Turning %1$s on, please wait…</string>
    <string name="notification_from">From</string>
    <string name="notification_send_reply">SEND</string>
    <string name="notification_time_now">Now</string>
    <string name="notification_tip">Tap to open Omni Swipe settings</string>
    <string name="notification_title">Omni Swipe is On</string>
    <string name="perm_desc_access_application_data">Allows the app to read/write to application data.</string>
    <string name="perm_label_access_application_data">Access application data</string>
    <string name="pop_time_black_list_add_entry">Block app</string>
    <string name="pop_time_black_list_dialog_tip">Block apps</string>
    <string name="pop_time_black_list_dialog_title">Choose apps to block</string>
    <string name="pref_description_app_promotion">Recommended just for you.</string>
    <string name="pref_description_apps_selected">Apps Selected: %1$d </string>
    <string name="pref_description_facebook">Participate in activities, and WIN prizes!</string>
    <string name="pref_description_notification_apps_off">This function is available only when the service is enabled</string>
    <string name="pref_description_rate_us">Please give us a 5-star rating</string>
    <string name="pref_description_theme">Applied: %1$s</string>
    <string name="pref_notification_mail_title">Email</string>
    <string name="pref_notification_other_title">Other 3rd party apps</string>
    <string name="pref_notification_sms_title">SMS</string>
    <string name="pref_notification_wechat_title">WeChat</string>
    <string name="pref_title_advanced_settings">Advanced settings</string>
    <string name="pref_title_app_box">AppBox</string>
    <string name="pref_title_app_promotion">Hola Launcher</string>
    <string name="pref_title_enable_swipe">Enable Omni Swipe</string>
    <string name="pref_title_initial_settings">Setup</string>
    <string name="pref_title_notification_settings">Notifications</string>
    <string name="pref_title_rate_us">Like Omni Swipe?</string>
    <string name="pref_title_theme">Themes</string>
    <string name="pref_title_toucher_position">Trigger area position</string>
    <string name="pref_title_toucher_type">Trigger Method</string>
    <string name="pref_title_when_to_pop">Enable Omni Swipe for:</string>
    <string name="pref_title_white_list">Apps excluded while boosting</string>
    <string name="title_tutorial_action_exit">Skip</string>
    <string name="user_guide_go">GO</string>
    <string name="user_guide_new_go">"Let's Go"</string>
    <string name="user_guide_new_start">"Hey there, 
 Welcome to Omni Swipe 
 Learn how to use "</string>
    <string name="user_guide_upgrade_note">"\"The better part of one's life consists of his friendships.\" 
  Abraham Lincoln"</string>
</resources>