<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lazy="http://schemas.android.com/apk/res-auto" >

    <com.lazyswipe.preference.MyPreference
        android:key="key_toucher_type"
        android:title="@string/pref_title_toucher_type"
        lazy:position="top" />
    <com.lazyswipe.preference.MyPreference
        android:key="key_toucher_position"
        android:title="@string/pref_title_toucher_position"
        lazy:position="middle" />
    <com.lazyswipe.preference.MyPreference
        android:key="key_when_to_pop"
        android:title="@string/pref_title_when_to_pop"
        lazy:position="middle" />
    <com.lazyswipe.preference.MyPreference
        android:key="key_white_list"
        android:title="@string/pref_title_white_list"
        lazy:position="middle" />

</PreferenceScreen>