<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />

    <View style="@style/ListSectorDivider" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@id/feedback_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="top"
                android:hint="@string/feedback_content_hint"
                android:imeOptions="flagNoExtractUi"
                android:minLines="4"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="#ff999999"
                android:textColorHint="#ffd3d3d3"
                android:textSize="13.0dip" />

            <View style="@style/ListSectorDivider" />

            <EditText
                android:id="@id/feedback_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:hint="@string/feedback_email_hint"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="#ff999999"
                android:textColorHint="#ffd3d3d3"
                android:textSize="13.0dip" />

            <View style="@style/ListSectorDivider" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="#ffeeeeee" >

                <TextView
                    android:id="@id/feedback_email_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textColor="#ff999999"
                    android:textColorLink="@color/master_color"
                    android:textSize="12.0dip" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffeeeeee"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@id/feedback_send"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bg_rect_button_intend"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/feedback_send"
                    android:textColor="@color/white"
                    android:textSize="16.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>