<?xml version="1.0" encoding="utf-8"?>
<com.lazyswipe.features.guide.NewGuide xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent" >

    <include
        android:id="@id/guide_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/guide_bg" />

    <include
        android:id="@id/slogan_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129.0dip"
        layout="@layout/logo_view"
        android:alpha="0.0"
        android:visibility="invisible" />

    <TextView
        android:id="@id/slogan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260.0dip"
        android:alpha="0.0"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/user_guide_new_start"
        android:textColor="@color/white"
        android:textSize="@dimen/new_guide_slogan_label_size" />

    <ImageView
        android:id="@id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="382.0dip"
        android:alpha="0.0"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@id/label_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:alpha="0.0" >

        <TextView
            android:id="@id/label_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/white"
            android:textSize="@dimen/new_guide_label_size" />

        <TextView
            android:id="@id/label_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5.0dip"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/white"
            android:textSize="@dimen/new_guide_label_size" />
    </RelativeLayout>

    <ImageView
        android:id="@id/btn_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:alpha="0.0"
        android:src="@drawable/btn_replay" />

    <RelativeLayout
        android:id="@id/btn_go"
        android:layout_width="fill_parent"
        android:layout_height="48.299988dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10.0dip"
        android:alpha="0.0"
        android:background="#33ffffff" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/user_guide_new_go"
            android:textColor="@color/white"
            android:textSize="@dimen/new_guide_slogan_label_size" />
    </RelativeLayout>

    <TextView
        android:id="@id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="15.0dip"
        android:alpha="0.0"
        android:fontFamily="sans-serif-light"
        android:padding="5.0dip"
        android:text="@string/title_tutorial_action_exit"
        android:textColor="#79ffffff"
        android:textSize="@dimen/new_guide_skip_btn_size" />

    <ImageView
        android:id="@id/toucher_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:alpha="0.0"
        android:src="@drawable/guide_fan_left" />

    <ImageView
        android:id="@id/toucher_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:alpha="0.0" />

    <ImageView
        android:id="@id/finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.0"
        android:src="@drawable/guide_finger" />

</com.lazyswipe.features.guide.NewGuide>